Fix bug where tech stack was not visible in light mode

--- a/styles.css
+++ b/styles.css
@@ -273,9 +273,6 @@
   .inline-block {
     display: inline-block;
   }
-  .table {
-    display: table;
-  }
   .h-4 {
     height: calc(var(--spacing) * 4);
   }
@@ -327,14 +324,8 @@
   .flex-2 {
     flex: 2;
   }
-  .border-collapse {
-    border-collapse: collapse;
-  }
   .cursor-pointer {
     cursor: pointer;
-  }
-  .resize {
-    resize: both;
   }
   .scroll-mt-32 {
     scroll-margin-top: calc(var(--spacing) * 32);
@@ -429,10 +420,6 @@
   .rounded-b-lg {
     border-bottom-right-radius: var(--radius-lg);
     border-bottom-left-radius: var(--radius-lg);
-  }
-  .border {
-    border-style: var(--tw-border-style);
-    border-width: 1px;
   }
   .border-2 {
     border-style: var(--tw-border-style);
@@ -618,9 +605,6 @@
   .italic {
     font-style: italic;
   }
-  .underline {
-    text-decoration-line: underline;
-  }
   .shadow {
     --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -628,10 +612,6 @@
   .shadow-md {
     --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
   }
   .transition-all {
     transition-property: all;
@@ -688,13 +668,6 @@
       }
     }
   }
-  .hover\:border-orange-200 {
-    &:hover {
-      @media (hover: hover) {
-        border-color: var(--color-orange-200);
-      }
-    }
-  }
   .hover\:border-orange-300 {
     &:hover {
       @media (hover: hover) {
@@ -727,13 +700,6 @@
     &:hover {
       @media (hover: hover) {
         fill: var(--color-sky-300);
-      }
-    }
-  }
-  .hover\:text-orange-200 {
-    &:hover {
-      @media (hover: hover) {
-        color: var(--color-orange-200);
       }
     }
   }
@@ -872,24 +838,6 @@
       }
     }
   }
-  .dark\:hover\:border-orange-300 {
-    @media (prefers-color-scheme: dark) {
-      &:hover {
-        @media (hover: hover) {
-          border-color: var(--color-orange-300);
-        }
-      }
-    }
-  }
-  .dark\:hover\:border-orange-400 {
-    @media (prefers-color-scheme: dark) {
-      &:hover {
-        @media (hover: hover) {
-          border-color: var(--color-orange-400);
-        }
-      }
-    }
-  }
   .dark\:hover\:\!fill-zinc-300 {
     @media (prefers-color-scheme: dark) {
       &:hover {
@@ -904,24 +852,6 @@
       &:hover {
         @media (hover: hover) {
           color: var(--color-orange-200);
-        }
-      }
-    }
-  }
-  .dark\:hover\:text-orange-300 {
-    @media (prefers-color-scheme: dark) {
-      &:hover {
-        @media (hover: hover) {
-          color: var(--color-orange-300);
-        }
-      }
-    }
-  }
-  .dark\:hover\:text-orange-400 {
-    @media (prefers-color-scheme: dark) {
-      &:hover {
-        @media (hover: hover) {
-          color: var(--color-orange-400);
         }
       }
     }
@@ -1019,11 +949,6 @@
   inherits: false;
   initial-value: 0 0 #0000;
 }
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
 @property --tw-duration {
   syntax: "*";
   inherits: false;
@@ -1068,7 +993,6 @@
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
-      --tw-outline-style: solid;
       --tw-duration: initial;
       --tw-ease: initial;
       --tw-scale-x: 1;
